Fix alignment for trending icon in list (#3277)
* Fix alignment with trending icon

* Rush change

* Use flex-box instead of padding to center icon

--- a/packages/experiments/src/components/signals/Signals.scss
+++ b/packages/experiments/src/components/signals/Signals.scss
@@ -15,6 +15,12 @@
   }
 }
 
+.centeredSignal {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .newItem {
   width: 0;
   height: 1em;
